# AthenaDrive

./: .gitignore  CMakeLists.txt
components/AS5048/: AS5048.cpp  CMakeLists.txt
components/BaseSPI/: BaseSPI.cpp  CMakeLists.txt
components/ContinuousADC/: CMakeLists.txt  ContinuousADC.cpp
components/Controller/: CMakeLists.txt  Controller.cpp
components/DRV8323/: CMakeLists.txt  DRV8323.cpp
components/Encoder/: CMakeLists.txt  Encoder.cpp
components/GlobalVariableManager/: CMakeLists.txt  GlobalVariableManager.cpp
components/GlobalVars/: CMakeLists.txt  GlobalVars.cpp
components/I2CManager/: CMakeLists.txt  I2CManager.cpp
components/LowpassFilter/: CMakeLists.txt  LowpassFilter.cpp
components/MCPWM/: CMakeLists.txt  MCPWM.cpp
components/MotorDriver/: CMakeLists.txt  MotorDriver.cpp
components/Multiplexer/: CMakeLists.txt  Multiplexer.cpp
components/OneshotADC/: CMakeLists.txt  OneshotADC.cpp
components/PID/: CMakeLists.txt  PI.cpp  PID.cpp
components/RealTimeTask/: CMakeLists.txt  RealTimeTask.cpp
components/SDCard/: CMakeLists.txt  SDCard.cpp
components/SPIManagerSecondary/: CMakeLists.txt  SPIManagerSecondary.cpp
components/SerialComm/: CMakeLists.txt  SerialComm.cpp
components/SpiManager/: CMakeLists.txt  SpiManager.cpp
components/SpiManagerPrimary/: CMakeLists.txt  SpiManagerPrimary.cpp
components/W5500Manager/: CMakeLists.txt  W5500Manager.cpp
components/as5048a/: CMakeLists.txt  as5048a.c
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  w5500.c  w5500.h
main/include/: Pinout.hpp
(+36 files in other folders)
